// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button > matches snapshot (danger) 1`] = `
<div>
  <button
    class="btn btn-red"
  >
    Danger Button
  </button>
</div>
`;

exports[`Button > matches snapshot (loading) 1`] = `
<div>
  <button
    class="btn btn-green"
    disabled=""
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-loader-circle h-4 w-4 animate-spin"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M21 12a9 9 0 1 1-6.219-8.56"
      />
    </svg>
    Loading Button
  </button>
</div>
`;

exports[`Button > matches snapshot (primary) 1`] = `
<div>
  <button
    class="btn btn-green"
  >
    Primary Button
  </button>
</div>
`;
